--- a/index.html
+++ b/index.html
@@ -2,4 +2,23 @@
 <html lang="en">
 <head>
     <title>Mark-Anthony M.P</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style>
+        html body {
+        font-family: 'Lato', sans-serif;
+        background-color: white;
+        }
+    </style>
 </head>
+
+<body>
+
+<div>
+    <h2>Mark-Anthony Moisescu-Pareja</h2>
+</div>
+
+
+
+</body>
