--- a/index.html
+++ b/index.html
@@ -42,10 +42,15 @@
         </div>
     </nav>
 
+<main>
+
     <div>
         <h2>Mark-Anthony Moisescu-Pareja</h2>
     </div>
 
+    <p>Welcome to my site! I am a fourth-year undergraduate at <a href="https://www.mcgill.ca/">McGill University</a> studying Mathematics.</p>
+    <p>My research interests include probability theory and machine learning.</p>
 
+</main>
 
 </body>
