Modified both files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <!-- <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand visible-xs" href="#">Mark-Anthont M.P</a>
@@ -40,9 +40,21 @@
                 
             </div>
         </div>
+    </nav> -->
+
+    
+    <!-- Navigation bar -->
+    <nav class="navbar">
+        <ul>
+            <li><a href="">Home</li>
+            <li><a href="">Research</li>
+            <li><a href="">Projects</li>
+        </ul>
     </nav>
 
-<main>
+
+    <!-- Main content of webpage -->
+    <main>
 
     <div>
         <h2>Mark-Anthony Moisescu-Pareja</h2>
@@ -51,7 +63,7 @@
     <p>Welcome to my site! I am a fourth-year undergraduate at <a href="https://www.mcgill.ca/">McGill University</a> studying Mathematics.</p>
     <p>My research interests include probability theory and machine learning.</p>
 
-</main>
+    </main>
 
 </body>
 <html>
