Modified both files

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </div>
     </nav> -->
 
-    
+
     <!-- Navigation bar -->
     <nav class="navbar">
         <ul>
-            <li><a href="">Home</li>
-            <li><a href="">Research</li>
-            <li><a href="">Projects</li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Research</a></li>
+            <li><a href="">Projects</a></li>
         </ul>
     </nav>
 
