--- a/index.html
+++ b/index.html
@@ -44,13 +44,23 @@
 
 
     <!-- Navigation bar -->
-    <nav class="navbar">
+    <header>
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Research</a></li>
+                <li><a href="#">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- <nav class="navbar">
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">Research</a></li>
             <li><a href="">Projects</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
 
     <!-- Main content of webpage -->
