--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Mark-Anthony M.P</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet" type="text/css"/>
 
     <style>
         html body {
