--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Mark-Anthony M.P</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <link rel="stylesheet" href="css/main.css">
+
     <style>
         html body {
         font-family: 'Lato', sans-serif;
