--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
 
-    <style>
+    <!-- <style>
         html body {
         font-family: 'Lato', sans-serif;
         background-color: white;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -65,7 +65,7 @@
 
 
     <!-- Main content of webpage -->
-    <main>
+    <!-- <main>
 
     <div>
         <h2>Mark-Anthony Moisescu-Pareja</h2>
@@ -74,7 +74,7 @@
     <p>Welcome to my site! I am a fourth-year undergraduate at <a href="https://www.mcgill.ca/">McGill University</a> studying Mathematics.</p>
     <p>My research interests include probability theory and machine learning.</p>
 
-    </main>
+    </main> -->
 
 </body>
 <html>
