--- a/index.html
+++ b/index.html
@@ -55,17 +55,9 @@
         </nav>
     </header>
 
-    <!-- <nav class="navbar">
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Research</a></li>
-            <li><a href="">Projects</a></li>
-        </ul>
-    </nav> -->
-
 
     <!-- Main content of webpage -->
-    <!-- <main>
+    <main>
 
     <div>
         <h2>Mark-Anthony Moisescu-Pareja</h2>
@@ -74,7 +66,7 @@
     <p>Welcome to my site! I am a fourth-year undergraduate at <a href="https://www.mcgill.ca/">McGill University</a> studying Mathematics.</p>
     <p>My research interests include probability theory and machine learning.</p>
 
-    </main> -->
+    </main>
 
 </body>
 <html>
