--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
 
-    <!-- <style>
-        html body {
-        font-family: 'Lato', sans-serif;
-        background-color: white;
-        }
-    </style> -->
+    <style>
+        html body {font-family: 'Lato', sans-serif;}
+    </style>
+    
 </head>
 
 <body>
